Link to demo app

--- a/views/_layout.html.slim
+++ b/views/_layout.html.slim
@@ -21,6 +21,7 @@ html
             li== link_to "How to use it", "#guides"
             li== link_to "Railsyard Plugins", "/plugins"
             li== link_to "Github", "https://github.com/cantierecreativo/railsyard-backend"
+            li== link_to "Demo", "https://railsyard-demo.herokuapp.com"
 
       #site-content== yield
 
